# Type-Vision-Cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  README_en.md
.config/: commit_convention.yaml
include/: config.hpp  parser.hpp  type_tree.hpp
include/inc/: generate_lambda_parsers.py  generate_member_parsers.py  lambda_signature_parser.inc  member_function_parser.inc  template_parser_helper.inc  template_parser_helper.py
src/: main.cpp
